--- a/view/case.view.xml
+++ b/view/case.view.xml
@@ -16,7 +16,7 @@
             <ToolbarSpacer/>
             <Button text="Accept" type="Accept" />
             <Button text="Reject" type="Reject" />
-            <Button text="Delete" />
+            <Button text="Hold" />
         </Toolbar>
     </footer>
   </Page>
