--- a/view/detail.view.xml
+++ b/view/detail.view.xml
@@ -109,5 +109,11 @@
             </items>
         </List>-->
     </content>
+    <footer>
+        <Toolbar>
+            <ToolbarSpacer/>            
+            <Button text="Print" press="printPage" />
+        </Toolbar>
+    </footer>
   </Page>
 </mvc:View>
